working on overflow bug

--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -35,7 +35,8 @@ div.hero {
             @include flexCenter(column);
             font-family: 'Monoton', cursive;
     }
-    @media (min-width: 658px) { 
+    @media (min-width: 762px) {
+
         float: right;
         justify-content: center !important;
         align-items: flex-end;
@@ -50,6 +51,8 @@ div.hero {
         h2 {
             padding: 0 20% 0 20%;
         }
+    }
+    @media (min-width: 658px) { 
     }
 }
 div.info-block {
