--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -158,7 +158,7 @@ div.hero h3 {
   font-family: 'Monoton', cursive;
 }
 
-@media (min-width: 658px) {
+@media (min-width: 762px) {
   div.hero {
     float: right;
     -webkit-box-pack: center !important;
@@ -619,6 +619,7 @@ body {
 }
 
 .fixed-bg {
+  overscroll-behavior: contain;
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;
